--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
-    <title>Todo List</title>
+    <title>Weather App</title>
   </head>
   <body></body>
 </html>
